ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/objectBindingPatternKeywordIdentifiers02/input.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/objectBindingPatternKeywordIdentifiers02/input.ts:2:14
  |
2 | var { while: while } = { while: 1 }
  |              ^^^^^

